*SVN*

* Allow you to delete cookies with options. Closes #3685 [josh, Chris Wanstrath]

* Deprecate pagination. Install the classic_pagination plugin for forward compatibility, or move to the superior will_paginate plugin.  #8157 [Mislav Marohnic]

* Fix filtered parameter logging with nil parameter values.  #8422 [choonkeat]

* Integration tests: alias xhr to xml_http_request and add a request_method argument instead of always using POST.  #7124 [Nik Wakelin, Francois Beausoleil, Wizard]

* Document caches_action.  #5419 [Jarkko Laine]

* observe_form always sends the serialized form.  #5271 [manfred, normelton@gmail.com]

* Update UrlWriter to accept :anchor parameter. Closes #6771. [octopod]

* Replace the current block/continuation filter chain handling by an implementation based on a simple loop.  Closes #8226 [Stefan Kaes]

* Return the string representation from an Xml Builder when rendering a partial.  #5044 [tpope]

* Cleaned up, corrected, and mildly expanded ActionPack documentation.  Closes #7190 [jeremymcanally]

* Small collection of ActionController documentation cleanups.  Closes #7319 [jeremymcanally]

* Performance: patch cgi/session/pstore to require digest/md5 once rather than per #initialize.  #7583 [Stefan Kaes]

* Deprecation: verification with :redirect_to => :named_route shouldn't be deprecated.  #7525 [Justin French]


*1.13.3* (March 12th, 2007)

* Fix a bug in Routing where a parameter taken from the path of the current request could not be used as a query parameter for the next.  #6752 [Nicholas Seckar]

* session_enabled? works with session :off.  #6680 [Catfish]

* Performance: patch cgi/session to require digest/md5 once rather than per #create_new_id.  [Stefan Kaes]


*1.13.2* (February 5th, 2007)

* Add much-needed html-scanner tests.  Fixed CDATA parsing bug. [Rick]

* improve error message for Routing for named routes. [Rob Sanheim]

* Added enhanced docs to routing assertions. [Rob Sanheim]
